# gencode

./: Jenkinsfile  README.md  README.md.bak  jib.yml  jules.yml
gencode-rest/: Makefile  pyproject.toml  run.py
gencode-rest/src/gencode/: __init__.py  app.py  ui.py
gencode-rest/src/gencode/files/: file_processor.py
gencode-rest/src/gencode/utils/: auth_token.py  chat_file_upload.py  chat_main.py  groups.py  summary.py  util.py
gencode-rest/src/gencode_configs/: __init__.py  application-dev.yaml  application-local.yaml  application-prod.yaml  application-test.yaml
gencode-web/: package-lock.json  package.json
gencode-web/src/: App.js  index.js
gencode-web/src/components/: AuthForm.jsx  AuthForm.jsx.bak  CommandPrompt.js  FileUpload.js  FileUpload.jsx  Navbar.jsx  UploadHistory.jsx  UploadHistory.jsx.bak  UserProfile.js  styles.css
gencode-web/src/pages/: ChatInterface.jsx  Dashboard.jsx  Dashboard.jsx.bak  Login.jsx  Register.jsx
gencode-web/src/services/: auth.js  chat.js  upload.js
